# klams-mind

./: .gitignore  AGENTS.md  README.md  config.example.toml  justfile  pyproject.toml  ruff.toml
.github/: copilot-instructions.md
evals/baselines/: homelab-retrieval.md
evals/suites/: failing-demo.toml  homelab-retrieval.toml
sprints/001-bootstrap-first-light/: sprint.md
sprints/002-retrieval-eval-harness/: sprint.md
sprints/003-client-lib/: sprint.md
sprints/004-scored-retrieval/: sprint.md
sprints/005-extraction/: sprint.md
sprints/006-contradiction-detection/: sprint.md
sprints/planning/: 001-cross-project-note.md  roadmap.md
src/klams_mind/: __init__.py  cli.py  config.py  klams.py  llm.py  transcripts.py
src/klams_mind/contradict/: chain.py  pairing.py  report.py  runner.py
src/klams_mind/eval/: checks.py  report.py  runner.py  suite.py
src/klams_mind/extract/: chain.py  report.py  runner.py
tests/: test_cli.py  test_config.py  test_contradict_chain.py  test_contradict_cli.py  test_contradict_pairing.py  test_contradict_report.py  test_contradict_runner.py  test_eval_checks.py  test_eval_cli.py  test_eval_report.py  test_eval_runner.py  test_eval_suite.py  test_extract_chain.py  test_extract_cli.py  test_extract_report.py  test_extract_runner.py  test_klams_client.py  test_llm.py  test_smoke.py  test_transcripts.py
