[project]
name = "klams-mind"
version = "0.1.0"
description = "LLM-smart memory companion to klams — extraction, contradiction detection, consolidation, and retrieval evals over the klams MCP/REST surface"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ken Hiatt" }]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.15",
    "ty",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
