[project]
name = "klams-mind"
version = "0.1.0"
description = "LLM-smart memory companion to klams — extraction, contradiction detection, consolidation, and retrieval evals over the klams MCP/REST surface"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ken Hiatt" }]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "mcp>=1.28.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "typer>=0.26.8",
]

[project.scripts]
klams-mind = "klams_mind.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15",
    "ty",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["live: hits live homelab services (skipped unless KLAMS_URL/KLAMS_TOKEN are set)"]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
